# prosense-obs-stitcher

./: CMakeLists.txt  README.md  prosense-obs-stitcher-config.h.in  prosense-obs-stitcher.c
data/: pto-stitcher.effect  pts-stitcher.effect
